--- a/common.ru.po
+++ b/common.ru.po
@@ -9869,7 +9869,7 @@ msgstr "Значение:"
 
 #: qcsrc/menu/xonotic/dialog_settings_misc_cvars.qc:64
 msgid "Reset to default"
-msgstr ""
+msgstr "Сбросить на стандартные"
 
 #: qcsrc/menu/xonotic/dialog_settings_misc_cvars.qc:72
 msgid "Description:"
